src/docs/asciidoc/style/skatt.css
/* ... */
/*********************************************
 * GLOBAL STYLES
 *********************************************/
/* line 7, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
body {
  background: #fdf6e3;
  background-color: #fdf6e3;
}

/* line 12, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal {
  font-family: "Lato", sans-serif;
  font-size: 36px;
  font-weight: normal;
  color: #657b83;
}

/* line 19, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
::selection {
  color: #fff;
  background: #d33682;
  text-shadow: none;
}

/* line 25, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal .slides > section,
.reveal .slides > section > section {
  line-height: 1.3;
  font-weight: inherit;
}

/*********************************************
 * HEADERS
 *********************************************/
/* line 35, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal h1,
.reveal h2,
.reveal h3,
.reveal h4,
.reveal h5,
.reveal h6 {
  margin: 0 0 20px 0;
  color: #586e75;
  font-family: "League Gothic", Impact, sans-serif;
  font-weight: normal;
  line-height: 1.2;
  letter-spacing: normal;
  text-transform: uppercase;
  text-shadow: none;
  word-wrap: break-word;
}

/* line 55, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal h1 {
  font-size: 3.77em;
}

/* line 56, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal h2 {
  font-size: 2.11em;
}

/* line 57, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal h3 {
  font-size: 1.55em;
}

/* line 58, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal h4 {
  font-size: 1em;
}

/* line 60, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal h1 {
  text-shadow: none;
}

/*********************************************
 * OTHER
 *********************************************/
/* line 69, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal p {
  margin: 20px 0;
  line-height: 1.3;
}

/* Ensure certain elements are never larger than the slide itself */
/* line 75, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal img,
.reveal video,
.reveal iframe {
  max-width: 95%;
  max-height: 95%;
}

/* line 81, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal strong,
.reveal b {
  font-weight: bold;
}

/* line 86, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal em {
  font-style: italic;
}

/* line 90, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal ol,
.reveal dl,
.reveal ul {
  display: inline-block;
  text-align: left;
  margin: 0 0 0 1em;
}

/* line 99, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal ol {
  list-style-type: decimal;
}

/* line 103, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal ul {
  list-style-type: disc;
}

/* line 107, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal ul ul {
  list-style-type: square;
}

/* line 111, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal ul ul ul {
  list-style-type: circle;
}

/* line 115, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal ul ul,
.reveal ul ol,
.reveal ol ol,
.reveal ol ul {
  display: block;
  margin-left: 40px;
}

/* line 123, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal dt {
  font-weight: bold;
}

/* line 127, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal dd {
  margin-left: 40px;
}

/* line 131, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal q,
.reveal blockquote {
  quotes: none;
}

/* line 136, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal blockquote {
  display: block;
  position: relative;
  width: 70%;
  margin: 20px auto;
  padding: 5px;
  font-style: italic;
  background: rgba(255, 255, 255, 0.05);
  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
}

/* line 147, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal blockquote p:first-child,
.reveal blockquote p:last-child {
  display: inline-block;
}

/* line 152, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal q {
  font-style: italic;
}

/* line 156, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal pre {
  display: block;
  position: relative;
  width: 90%;
  margin: 20px auto;
  text-align: left;
  font-size: 0.55em;
  font-family: monospace;
  line-height: 1.2em;
  word-wrap: break-word;
  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
}

/* line 171, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal code {
  font-family: monospace;
}

/* line 175, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal pre code {
  display: block;
  padding: 5px;
  overflow: auto;
  max-height: 400px;
  word-wrap: normal;
}

/* line 183, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal table {
  margin: auto;
  border-collapse: collapse;
  border-spacing: 0;
}

/* line 189, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal table th {
  font-weight: bold;
}

/* line 193, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal table th,
.reveal table td {
  text-align: left;
  padding: 0.2em 0.5em 0.2em 0.5em;
  border-bottom: 1px solid;
}

/* line 200, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal table th[align="center"],
.reveal table td[align="center"] {
  text-align: center;
}

/* line 205, ../../../../src/main/reveal.js-3.3.0/css/theme/template/theme.scss */
.reveal table th[align="right"],
.reveal table td[align="right"] {
  text-align: right;
}
/* ... */

